Bug 110464, don't load external entities for standalone documents (minor perf optimization). Patch from henris@clinet.fi. r=heikki, sr=jst.